Bug 434335 - Zoom in/out is missing in the context menu
Summary: Zoom in/out is missing in the context menu
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: misc (other bugs)
Version First Reported In: 5.16.3
Platform: Slackware Linux
: NOR minor
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-03-12 18:42 UTC by Dmitri Koulikoff
Modified: 2022-02-08 12:32 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.19.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dmitri Koulikoff 2021-03-12 18:42:02 UTC
SUMMARY

  I can change the size of the message only with Ctrl+"+" or Ctrl+"-" But in the context menu there is no item for it.


STEPS TO REPRODUCE
1. Right-click on the message in the main window


OBSERVED RESULT

  In the opened context menu there is not "Zoom" item


EXPECTED RESULT

  It should be.


SOFTWARE/OS VERSIONS
Operating System: Slackware-current
KDE Plasma Version: 5.21.2
KDE Frameworks Version: 5.79.0
Qt Version: 5.15.2
Kernel Version: 5.10.22
OS Type: 64-bit
Graphics Platform: X11
Processors: 12 × Intel® Core™ i7-9750H CPU @ 2.60GHz
Memory: 31.1 GiB of RAM
Graphics Processor: Mesa Intel® UHD Graphics 630
Comment 1 Laurent Montel 2021-06-18 05:48:04 UTC
Are you installed kdepim-addons ?
Comment 2 Dmitri Koulikoff 2022-01-16 16:07:45 UTC
(In reply to Laurent Montel from comment #1)
> Are you installed kdepim-addons ?

yes, 21.12.1
Comment 3 Laurent Montel 2022-01-16 16:23:12 UTC
Did you activated zoom plugins ? configure kmail -> plugins-> "editor plugins"->zoom
Comment 4 Dmitri Koulikoff 2022-01-16 17:46:40 UTC
(In reply to Laurent Montel from comment #3)
> Did you activated zoom plugins ? configure kmail -> plugins-> "editor
> plugins"->zoom

Yes, but in the context menu the item did not appear, only in View menu.
Comment 5 Laurent Montel 2022-02-08 07:59:37 UTC
indeed it's not in popup menu.
I will look at how to add it in popup menu
Comment 6 Laurent Montel 2022-02-08 12:32:33 UTC
Git commit 4fbaeb8e501914bd63e716cdac0e8ad810de8160 by Laurent Montel.
Committed on 08/02/2022 at 12:32.
Pushed by mlaurent into branch 'release/21.12'.

Fix Bug 434335 Zoom in/out is missing in the context menu
FIXED-IN: 5.19.3

M  +1    -1    kmail/editorplugins/zoomtext/autotests/zoomtextplugineditortest.cpp
M  +1    -1    kmail/editorplugins/zoomtext/zoomtextplugineditor.cpp

https://invent.kde.org/pim/kdepim-addons/commit/4fbaeb8e501914bd63e716cdac0e8ad810de8160