Fix Bug 434335 Zoom in/out is missing in the context menu

BUG: 434335
FIXED-IN: 5.19.3