kmail/editorplugins/zoomtext/zoomtextplugineditor.cpp
@@ -27,7 +27,7 @@ MessageComposer::PluginEditorInterface *ZoomTextPluginEditor::createInterface(QO
 
 bool ZoomTextPluginEditor::hasPopupMenuSupport() const
 {
-    return false;
+    return true;
 }
 
 bool ZoomTextPluginEditor::hasStatusBarSupport() const
